Lots more work on optimization only to finally realize that my laptop was running the game with the integrated gpu instead of the dedicated.  Switching that improved performance by 4x.