@@ -1,22 +1,5 @@
 # Dev Lab
 
-### Desktop
-```
-!(this instanceof java.lang.ClassNotFoundException)
-&& !(this instanceof java.lang.NumberFormatException)
-&& !(this instanceof java.io.IOException)
-&& !(this instanceof java.security.PrivilegedActionException)
-&& !(this instanceof java.lang.NoSuchFieldError)
-&& !(this instanceof java.lang.NoSuchFieldException)
-&& !(this instanceof java.lang.NoSuchMethodError)
-&& !(this instanceof java.lang.NoSuchMethodException)
-&& !(this instanceof sun.nio.fs.WindowsException)
-&& !(this instanceof java.lang.UnsatisfiedLinkError)
-&& !(this instanceof java.lang.IllegalAccessException
-&& !(this instanceof kotlin.reflect.jvm.internal.KotlinReflectionInternalError)
-```
-
-### Laptop
 ```
 !(this instanceof java.lang.ClassNotFoundException)
 && !(this instanceof java.lang.NumberFormatException)
@@ -36,8 +19,13 @@
 && !(this instanceof sun.nio.fs.WindowsException)
 ```
 
+```
+&& (this.getClass().getName() != "kotlin.reflect.jvm.internal.KotlinReflectionInternalError")
+```
 ### VM Options
-```-Djava.library.path="E:/dev/games/java-freetype/cmake-build-debug/bin" -ea -Dcom.sun.management.jmxremote```
+```-Djava.library.path="E:/dev/games/java-freetype/cmake-build-debug/bin" -ea -Dcom.sun.management.jmxremote
+-Xlog:gc*=debug:file=logs/gclog.txt 
+```
 
 ### Working directory
 ```out\bin```
